Updating database url- souviks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql.rail-ticket-dev.svc.cluster.local:3306/rhos_reservation_db_tcs
+spring.datasource.url=jdbc:mysql://mysql.rail-backend-dev.svc.cluster.local:3306/rhos_reservation_db_tcs
 spring.datasource.username=rhosotb
 spring.datasource.password=rhosotb
-
